--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -545,7 +545,7 @@ Denote \(\mathbf{I} = \mathbf{1}^{\vee} \oplus \mathbf{1} \in \mathbf{T}_{c}\). 
 		\adjustbox{valign=c}{\input{graphics/two_coloured_bracket_equivariance_simplified.pdf_tex}}
 		}
 	\]
-	which is a consequence of the fact that morphisms in \(\mathbf{T}_{c}\) are direct sums of elements of \(\mathcal{O}_{\text{Lie}}\) (Definition \ref{def:2-coloured-casimir-prop}), and the equivariance axioms of the Lie operad in Definition \ref{def:operad}.
+	which is a consequence of the fact that morphisms in \(\mathbf{T}_{c}\) are direct sums of elements of \(\mathcal{O}_{\text{Lie}}\) (Definition \ref{def:2-coloured-casimir-prop}), and the equivariance axioms of the Lie operad in Definition \ref{def:operad-over-set}.
 
 	Without loss of generality, the same argument proves that \(a_{r} + a_{\ell} \circ \tau = 0 \in \mathbf{T}_{c}(\mathbf{1}^{\vee} \otimes \mathbf{1}, \mathbf{1})\), completing the proof of \ref{prf:generalised-antisymmetry-y}.
 
