--- a/macros.tex
+++ b/macros.tex
@@ -7,7 +7,7 @@
 
 % Common operations and functions
 \newcommand{\gr}{\operatorname{gr}}
-\newcommand{\id}{\operatorname{id}}
+\newcommand{\id}{\mathrm{id}}
 
 % Common sets
 \newcommand{\singularknots}{\mathcal{K}^{\bullet}}
